# PlaylistMaker

./: .gitignore  .gitmodules  Makefile  PlaylistMaker.code-workspace  README.md  meson.build
include/: Explorer.hpp  PMApp.hpp  PMSettings.hpp  PMjson.hpp  Playlist.hpp  easylogging++.h
resources/: settings.json
src/: Explorer.cpp  PMApp.cpp  PMMain.cpp  PMMainBorealis.cpp  PMSettings.cpp  Playlist.cpp  meson.build  playlistmaker.cpp
